# Snowblower-Machine-Project

./: HaroldvsSpartyFightMovie.anim  README.md
CanadianExperienceLib/: AnimChannel.h  MachineDrawable.cpp  MachineDrawable.h  Picture.cpp  Picture.h  PictureFactory.cpp  PictureFactory.h  SpartyFactory.cpp  Timeline.cpp  Timeline.h  ViewEdit.cpp  ViewEdit.h
MachineDemo/: CMakeLists.txt  MachineSystemIsolator.h  main.cpp
MachineLib/: CMakeLists.txt  Component.cpp  Component.h  Const.h  IMachineSystem.h  Machine.cpp  Machine.h  MachineCFactory.cpp  MachineCFactory.h  MachineDialog.cpp  MachineDialog.h  MachineFactory1.cpp  MachineFactory1.h  MachineFactory2.cpp  MachineFactory2.h  MachineStandin.cpp  MachineStandin.h  MachineSystem.cpp  MachineSystem.h  MachineSystemFactory.cpp  MachineSystemStandin.cpp  MachineSystemStandin.h  Motor.cpp  Motor.h  Polygon.cpp  Polygon.h  Pulley.cpp  Pulley.h  RotationSink.cpp  RotationSink.h  RotationSource.cpp  RotationSource.h  Shape.cpp  Shape.h  Snow.cpp  Snow.h  SnowBlower.cpp  SnowBlower.h  pch.h
resources/xrc/: main.fbp  main.xrc
